--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+        <script src="script.js"></script>
     </head>
     <body>
         <section class="header-about">
@@ -19,6 +20,45 @@
                     </ul>
                 </div>
             </nav>
+            <div class="main-text">
+                <h1>About Us</h1>
+                <p>Check out all of our amazing players!</p>
+                <img src="GroupPicture.JPG" width="500px" height="500px"><br>
+                <img src="Arrow.png" width="200px" height="200px">
+            </div>
+        </section>
+        <section class="decoration"></section>
+        <section class="body-about">
+            <table>
+                <tr>
+                    <td>
+                        <p>Adam is our amazing trumpet player who participated in the all state jazz band his Junior and Senior years of high school.</p>
+                        <img src="Adam.JPG">
+                    </td>
+                    <td>
+                        <p>Andy is our alto sax player as well as the developer of this website.</p>
+                        <img src="Andy.JPG">
+                    </td>
+                    <td>
+                        <p>Conrad throws down on the drumset for our group, and he is also looking to pursue a music composition career in college.</p>
+                        <img src="Conrad.JPG">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Geoffrey is our piano player. Don't really know what else to say, it goes hard.</p>
+                        <img src="Geoffrey.JPG">
+                    </td>
+                    <td>
+                        <p>Lindsay has been dragged into this by Nik, and still does a great job on the bass.</p>
+                        <img src="Lindsay.JPG">
+                    </td>
+                    <td>
+                        <p>Nik is our bari sax player, and is somehow always out of tune and in tune at the same time. (Hates Triplets)</p>
+                        <img src="Nik.JPG">
+                    </td>
+                </tr>
+            </table>   
         </section>
     </body>
 </html>
