--- a/watch.html
+++ b/watch.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+        <script src="script.js"></script>
     </head>
     <body>
         <section class="header-watch">
@@ -19,6 +20,14 @@
                     </ul>
                 </div>
             </nav>
+        </section>
+        <section class="decoration"></section>
+        <section class="videos">
+            <br>
+            <h1>Watch Our Newest Videos</h1>
+            <p><iframe width="1280" height="720" src="https://www.youtube.com/embed/I69VhBGRiV8" title="Four - Senioritis" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p> <br>
+            <p><iframe width="1280" height="720" src="https://www.youtube.com/embed/pCQhMyDWPTU" title="Blue Bossa - Senioritis" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p> <br>
+            <p><iframe width="1280" height="720" src="https://www.youtube.com/embed/TMX5EWixn4Q" title="Take the A Train - Senioritis" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p> <br>
         </section>
     </body>
 </html>
