--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+        <script src="script.js"></script>
     </head>
     <body>
         <section class="header">
@@ -20,7 +21,7 @@
                 </div>
             </nav>
             <div class="main-text">
-                <h1>Bay High School's Pride and Joy</h1>
+                <h1>Our Group</h1>
                 <p>Founded in 2022, Senioritis is a jazz sextet featuring members of the class of 2023 and 2024. We play many different tunes across multiple genres of jazz, and our instrumentation includes Alto Sax, Trumpet, Bari Sax, Piano, Bass, and Drumset</p>
             </div>
         </section>    
